Sun Jul  2 20:42:45 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* makeshlib.sh (ldflags): Adapt AIX case to work with Gcc.

	* configure.in: Move Gcc test to top level configure.in.

Fri Jun 23 19:11:20 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* configure.in: Add aix.bincmds as target on AIX.
	(SHLIB_TAIL_COMP): set and substitute so SHLIBDIR works

	* Makefile.in (makeshlib): Create aix.bincmds with the binder
        script exerpt to get the libpath right.

	* configure.in: Modified to test and see if we're using Gcc

	* Makefile.in (makeshlib): Make makeshlib from makeshlib.sh


	* makeshlib.sh (LIBPATH): Modified to allow for substitution of CC
        and HAVE_GCC from Makefile.  Modified to imbed the proper search
        path into the shared libraries for AIX.


Thu Jun 22 21:02:13 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* makeshlib: Added AIX support.

Mon Jun 19 00:58:33 1995  Tom Yu  (tlyu@dragons-lair)

	* getsyms, getsyms.sed: fix a few random bugs

	* getsyms, getsyms.sed: simple scripts to find #ifdef's that
		aren't declared with configure.in

Fri Jun 16 14:05:03 1995  Tom Yu  (tlyu@dragons-lair)

	* libupdate.sh: oops they were right to begin with; hack
		aclocal.m4 instead.

	* libupdate.sh: ARADD and ARCHIVE were backwards

Thu Jun 15 18:14:46 EDT 1995	Paul Park	(pjpark@mit.edu)
	* makeshlib - Add arguments for library search directories, library
		lists and flags to link with.

Fri Jun  9 18:59:02 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.  Use DO_SUBDIRS to
		recurse down subdirectories.

Tue Jun  6 19:46:00 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix make install


Fri May 26 18:43:35 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in	- Add berk_db

Fri May 26 13:29:07 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* makeshlib: For alpha-osf1 update the local shared library registry 
